# "test/ChangeLog"

2006-01-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-76-2-fixdump-06:
	  Removed archaic clean-test and subdir.not_a_test bogus targets
		and no longer using test_report.txt.  Good riddance. 
	  TODO: eliminate redundant make suffix rules to produces
		various dumps -- just use one suffix rule.
	  TODO: add test rule for generating intermediate objects in
		different manners, skipping and fusing compile phases.  
		This is badly needed to detect and correct a critical
		inconsistency bug!


2006-01-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-74-PRS-04-01:
	  Added even more suffix rules for testing convenience.  
		Just run 'make'!
	  Added more echo- targets to make test updating (en masse) easy.


2006-01-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-13:
	  Added suffix rules for standard HACKT object files
		and various other test output files.
	  Now can build dot/ps visualizations of prsim expressions
		with Makefile rules!


2006-01-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-11:
	  Added test support for prsim expression allocation dumps.  
	  TODO: decide what to do about an expression optimization pass...
		Add a command-line flag to enable/disable it.  


2005-12-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-merged-rename-00-06:
	  Trunk merge.  Massive renaming.  


2005-12-12	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71-rename-00-05:
	  MAJOR TEST RESTRUCTURING: script names, object file extensions, 
		and Makefile macro variables have been expunged of
		"art" and "ART", and replaced with more appropriate names.  
	  The Object file naming convention we adopt now is:
		.haco -- just compiled
		.haco-u -- unrolled
		.haco-c -- created
		.haco-a -- allcoated


2005-12-11	David Fang		<fangism@users.sourceforge.net>
