@@ -3,7 +3,7 @@
 # (Prior to 2005/06/19, this file was "configure.in", 
 #	in case one should want to trace back the CVS revision history.)
 #
-#	$Id: configure.ac,v 1.34 2006/02/06 00:04:30 fang Exp $
+#	$Id: configure.ac,v 1.35 2006/02/06 03:20:10 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
@@ -691,6 +691,8 @@ AC_CONFIG_FILES([test/hackt-unroll-expect.sh],
 	[chmod +x test/hackt-unroll-expect.sh])
 AC_CONFIG_FILES([test/hackt-create-expect.sh],
 	[chmod +x test/hackt-create-expect.sh])
+AC_CONFIG_FILES([test/check-create-consistency.sh],
+	[chmod +x test/check-create-consistency.sh])
 AC_CONFIG_FILES([test/hackt-alloc-expect.sh],
 	[chmod +x test/hackt-alloc-expect.sh])
 AC_CONFIG_FILES([test/hackt-cflat-expect.sh],
