@@ -2,7 +2,7 @@
 # a template makefile for testing, to be included in recursive invocations
 # Include this Makefile at the end of every subdirectoy's Makefile.am.
 # The counterpart header Makefile is "test/Make.test-head".
-#	$Id: Make.test-tail,v 1.16 2006/02/01 20:57:43 sandra Exp $
+#	$Id: Make.test-tail,v 1.17 2006/02/06 03:20:12 fang Exp $
 
 HACKT_EXE = $(top_builddir)/src/hackt
 PARSE_TEST_EXE = $(HACKT_EXE) parse_test
@@ -22,7 +22,9 @@ HACKT_PARSE_TEST_SH = $(TEST_BUILDDIR)/parse-test-expect.sh
 HACKT_OBJ_TEST_SH = $(TEST_BUILDDIR)/hackt-obj-diff.sh
 HACKT_UNROLL_TEST_SH = $(TEST_BUILDDIR)/hackt-unroll-expect.sh
 HACKT_CREATE_TEST_SH = $(TEST_BUILDDIR)/hackt-create-expect.sh
+HACKT_CREATE_FROM_HACO_TEST_SH = $(TEST_BUILDDIR)/check-create-consistency.sh
 HACKT_ALLOC_TEST_SH = $(TEST_BUILDDIR)/hackt-alloc-expect.sh
+HACKT_ALLOC_FROM_HACO_TEST_SH = $(TEST_BUILDDIR)/check-alloc-consistency.sh
 HACKT_CFLAT_TEST_SH = $(TEST_BUILDDIR)/hackt-cflat-expect.sh
 HACKT_PRSIMEXPR_TEST_SH = $(TEST_BUILDDIR)/hackt-prsim-expr-alloc-expect.sh
 
@@ -96,6 +98,9 @@ DEFAULT_OBJDUMP_RULE_ACTION = $(HACKT_OBJDUMP_EXE) $< > $@ 2>&1
 .haco-u.haco-c:
 	$(HACKT_CREATE_EXE) $< $@
 
+.haco.haco-c-from-haco:
+	$(HACKT_CREATE_EXE) $< $@
+
 .haco-c.haco-c-dump:
 	$(DEFAULT_OBJDUMP_RULE_ACTION)
 
@@ -112,7 +117,21 @@ DEFAULT_OBJDUMP_RULE_ACTION = $(HACKT_OBJDUMP_EXE) $< > $@ 2>&1
 		"\"$(POM_INDEX_FILTER)\"" >> $@
 	@$(CHMOD) +x $@
 
+.hac.hacktcreatefromhacotest:
+	@$(ECHO) "#!$(SHELL)" > $@
+	@$(ECHO) "# \"$@\"" >> $@
+	@$(ECHO) $(HACKT_CREATE_FROM_HACO_TEST_SH) "\"$(HACKT_CREATE_EXE)\"" \
+		"\"$(HACKT_OBJDUMP_EXE)\"" $(srcdir) \
+		$* "\"$(HACKT_OBJ_DIFF_FILTER)\"" >> $@
+	@$(CHMOD) +x $@
+
 .haco-c.haco-a:
+	$(HACKT_ALLOC_EXE) $< $@
+
+.haco.haco-a-from-haco:
+	$(HACKT_ALLOC_EXE) $< $@
+
+.haco-u.haco-a-from-u:
 	$(HACKT_ALLOC_EXE) $< $@
 
 .haco-a.haco-a-dump:
@@ -130,6 +149,23 @@ DEFAULT_OBJDUMP_RULE_ACTION = $(HACKT_OBJDUMP_EXE) $< > $@ 2>&1
 		"\"$(ANALYZE_DIFF_AWK)\"" \
 		"\"$(POM_INDEX_FILTER)\"" >> $@
 	@$(CHMOD) +x $@
+
+# does a 3-way difference test
+.hac.hacktallocfromhacotest:
+	@$(ECHO) "#!$(SHELL)" > $@
+	@$(ECHO) "# \"$@\"" >> $@
+	@$(ECHO) $(HACKT_ALLOC_FROM_HACO_TEST_SH) "\"$(HACKT_ALLOC_EXE)\"" \
+		"\"$(HACKT_OBJDUMP_EXE)\"" $(srcdir) \
+		$* "\"$(ALLOC_FILTER)\"" >> $@
+	@$(CHMOD) +x $@
+
+# .hac.hacktallocfromunrolltest:
+# 	@$(ECHO) "#!$(SHELL)" > $@
+# 	@$(ECHO) "# \"$@\"" >> $@
+# 	@$(ECHO) $(HACKT_ALLOC_FROM_UNROLL_TEST_SH) "\"$(HACKT_ALLOC_EXE)\"" \
+# 		"\"$(HACKT_OBJDUMP_EXE)\"" $(srcdir) \
+# 		$* "\"$(ALLOC_FILTER)\"" >> $@
+# 	@$(CHMOD) +x $@
 
 .haco-a.prs:
 	$(HACKT_CFLAT_PRSIM_EXE) $< > $@
@@ -162,7 +198,8 @@ endif
 
 CHECK_SUMMARIES = compilediffs objdiffs unrolldiffs creatediffs allocdiffs \
 	unrolldiffs.noindex creatediffs.noindex allocdiffs.noindex \
-	prsdiffs prsdiffs.sort
+	prsdiffs prsdiffs.sort \
+	createfromhacodiffs
 # need prs summaries? nah...
 
 compilediffs: force
@@ -176,6 +213,9 @@ unrolldiffs: force
 
 creatediffs: force
 	-$(CAT) *.creatediff > $@
+
+createfromhacodiffs: force
+	-$(CAT) *.create-from-haco-diff > $@
 
 allocdiffs: force
 	-$(CAT) *.allocdiff > $@
@@ -216,6 +256,9 @@ TESTS += $(HACKT_PARSE_TEST_SUBJECTS:=.hacktcmpltest) \
 	$(HACKT_ALLOC_TEST_SUBJECTS:=.hacktalloctest) \
 	$(HACKT_CFLAT_TEST_SUBJECTS:=.hacktcflattest) \
 	$(HACKT_PRSIMEXPR_TEST_SUBJECTS:=.hacktprsimexprtest) 
+# not yet...
+#	$(HACKT_CREATE_TEST_SUBJECTS:=.hacktcreatefromhacotest)
+#	$(HACKT_ALLOC_TEST_SUBJECTS:=.hacktallocfromhacotest)
 
 EMPTY_CFLAT_PRS = $(EMPTY_CFLAT_PRS_TESTS:=.expect-prs)
 
@@ -350,24 +393,28 @@ clean-tests-recursive:
 # automatically removes $(CLEANFILES)
 clean-local:
 	-$(RM) *.core core.*
-	-$(RM) *.noindex
-
-# really remove these files!
-cleaner: clean cleaner-recursive cleaner-local
-
-cleaner-local:
 	-$(RM) *.filter *.diff *.sort *.noindex
 	-$(RM) *.hacktcmpltest *.hacktobjtest *.hacktunrolltest
 	-$(RM) *.hacktcreatetest *.hacktalloctest *.hacktcflattest
+	-$(RM) *.hacktcreatefromhacotest
 	-$(RM) *.hacktprsimexprtest
 	-$(RM) *.indump *.outdump *.objdiff
 	-$(RM) *.haco *.haco-dump
 	-$(RM) *.haco-u *.unrolldump *.unrolldiff *.haco-u-dump
 	-$(RM) *.haco-c *.createdump *.creatediff *.haco-c-dump
 	-$(RM) *.haco-a *.allocdump *.allocdiff *.haco-a-dump
+	-$(RM) *.haco-c-from-haco
+	-$(RM) *.haco-c-from-haco-dump
+	-$(RM) *.haco-c-from-haco-dump.filter
+	-$(RM) *.haco-c-from-haco-diff
 	-$(RM) *.prs *.prsdiff
 	-$(RM) *.prsimexpr *.prsimexprdiff
 	-$(RM) *.prsimexpr-dot *.prsimexpr-ps
+
+# really remove these files!
+cleaner: clean cleaner-recursive cleaner-local
+
+cleaner-local:
 # legacy object files
 	-$(RM) *.artobj *.artobjunroll *.hacktobjcreate *.hacktobjalloc
 
