@@ -32,6 +32,7 @@ core.*
 *.prsimexprdiff
 *.sort
 *-dump
+*-diff
 ignore
 Makefile
 Makefile.in
